[tool.poetry]
name = "pypackage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.28.1"
platformdirs = "^2.6.2"
tomli = "^2.0.1"
result = "^0.9.0"
packaging = "^23.0"
pypi-simple = "^1.0.0"
rich = "^13.0.1"
pipdeptree = "^2.3.3"
build = "^0.10.0"
tomli-w = "^1.0.0"
virtualenv = "^20.17.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"